# logseq-analyzer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  __init__.py  __main__.py  built_in_logseq.py  compile_re.py  gui.py  logseq-analyzer-theme.qss  logseq_config.py  main.py  profile_analyzer.py  pyproject.toml  reporting.py  requirements.txt  ruff.toml  typos.toml  user_config.ini  zensical.toml
.github/workflows/: docs.yml
configuration/: config.ini
docs/: __main__.md  app.md  index.md
docs/analysis/: assets.md  fileindex.md  graph.md  index.md  journals.md  namespaces.md  summarizers.md
docs/config/: arguments.md  graph_config.md  index.md
docs/gui/: analysis_worker.md  index.md  main_window.md  ui_components.md
docs/io/: cache.md  filesystem.md  index.md  report_writer.md
docs/logseq_file/: bullets.md  file.md  index.md  info.md  stats.md
docs/patterns/: adv_cmd.md  code.md  content.md  double_curly.md  double_parentheses.md  embedded_links.md  external_links.md  index.md
docs/source/: conf.py  index.rst  logseq_analyzer.analysis.assets.rst  logseq_analyzer.analysis.graph.rst  logseq_analyzer.analysis.journals.rst  logseq_analyzer.analysis.namespaces.rst  logseq_analyzer.analysis.query_graph.rst  logseq_analyzer.analysis.rst  logseq_analyzer.analysis.summary_content.rst  logseq_analyzer.analysis.summary_files.rst  logseq_analyzer.app.rst  logseq_analyzer.config.analyzer_config.rst  logseq_analyzer.config.arguments.rst  logseq_analyzer.config.builtin_properties.rst  logseq_analyzer.config.datetime_tokens.rst  logseq_analyzer.config.default_logseq_config_edn.rst  logseq_analyzer.config.edn_parser.rst  logseq_analyzer.config.graph_config.rst  logseq_analyzer.config.rst  logseq_analyzer.gui.main_window.rst  logseq_analyzer.gui.rst  logseq_analyzer.io.cache.rst  logseq_analyzer.io.file_mover.rst  logseq_analyzer.io.filesystem.rst  logseq_analyzer.io.path_validator.rst  logseq_analyzer.io.report_writer.rst  logseq_analyzer.io.rst  logseq_analyzer.logseq_file.bullets.rst  logseq_analyzer.logseq_file.file.rst  logseq_analyzer.logseq_file.name.rst  logseq_analyzer.logseq_file.rst  logseq_analyzer.logseq_file.stats.rst  logseq_analyzer.rst  logseq_analyzer.utils.enums.rst  logseq_analyzer.utils.helpers.rst  logseq_analyzer.utils.patterns.rst  logseq_analyzer.utils.rst
docs/utils/: date_utilities.md  enums.md  helpers.md  index.md
logseq_analyzer/: __init__.py  __main__.py  _global_objects.py  app.py  cache.py  default_logseq_config_edn.py  helpers.py  logseq_analyzer.py  logseq_analyzer_config.py  logseq_assets.py  logseq_bullets.py  logseq_config_edn.py  logseq_file.py  logseq_file_mover.py  logseq_filename.py  logseq_filestats.py  logseq_graph.py  logseq_graph_config.py  logseq_journals.py  logseq_namespaces.py  logseq_path_validator.py  namespace_analyzer.py  process_content_data.py  process_summary_data.py  regex_patterns.py  report_writer.py
logseq_analyzer/analysis/: __init__.py  assets.py  graph.py  index.py  journals.py  namespaces.py  query_graph.py  summarizers.py  summary_content.py  summary_files.py
logseq_analyzer/config/: __init__.py  analyzer_config.py  arguments.py  builtin_properties.py  datetime_tokens.py  edn_parser.py  graph_config.py
logseq_analyzer/gui/: __init__.py  analysis_worker.py  main_window.py  ui_components.py
logseq_analyzer/io/: __init__.py  cache.py  file_mover.py  filesystem.py  path_validator.py  report_writer.py
logseq_analyzer/logseq_file/: __init__.py  bullets.py  file.py  info.py  name.py  stats.py
logseq_analyzer/patterns/: __init__.py  adv_cmd.py  code.py  (+5 more)
src/: _global_objects.py  _oop.py  app.py  cache.py  compile_re.py  compile_regex.py  config.ini  config.py  config_loader.py  contentdata.py  core.py  create.py  data_getters.py  filedata.py  filename_processing.py  helpers.py  keynames.py  logseq_all_files.py  logseq_analyzer.py  logseq_analyzer_config.py  logseq_assets.py  logseq_bullets.py  logseq_config.py  logseq_config_edn.py  logseq_content.py  logseq_file.py  logseq_filename.py  logseq_filestats.py  logseq_graph.py  logseq_graph_config.py  logseq_journals.py  logseq_move_files.py  logseq_uri_convert.py  namespace.py  namespace_analyzer.py  process_basic_file_data.py  process_content_data.py  process_dangling_links.py  process_journals.py  process_namespaces.py  (+7 more)
tests/: __init__.py  conftest.py
(+83 files in other folders)
