[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "logseq_analyzer"
authors = [{name = "Wonyoung Jang", email = "contact@wonyoungjang.org"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python=">=3.13"
dynamic = ["version", "description"]
dependencies = [
    "colorama==0.4.6",
    "furo==2024.8.6",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "PySide6==6.9.0",
    "PySide6_Addons==6.9.0",
    "PySide6_Essentials==6.9.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "shiboken6==6.9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "faker",
    "tox",
    "coverage",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/wonyoung-jang/logseq-analyzer"

[project.scripts]
logseq-analyzer = "logseq_analyzer.__main__:main"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
