[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[project]
name = "logseq_analyzer"
version = "0.1.0"
description = "A tool to analyze your Logseq graph."
authors = [{ name = "Wonyoung Jang", email = "contact@wonyoungjang.org" }]
requires-python = ">=3.14"
dependencies = [
    "colorama==0.4.6",
    "furo==2024.8.6",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "pyside6==6.9.0",
]

[project.urls]
Home = "https://github.com/wonyoung-jang/logseq-analyzer"

[project.scripts]
logseq-analyzer = "logseq_analyzer.__main__:main"

[tool.uv.build-backend]
module-name = "logseq_analyzer"
module-root = ""

[tool.vulture]
paths = ["./logseq_analyzer", "whitelist.py"]
ignore_decorators = ["@app.*"]
min_confidence = 40
verbose = false

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra", "-v"]
testpaths = ["tests"]

[dependency-groups]
tests = [
    "coverage>=7.8.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
